Update stylesheet and link paths in index.html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="components.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -25,9 +25,9 @@
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="pages/dashboard.html">Dashboard</a></li>
-                <li><a href="pages/tambah-tabungan.html">Tambah Tabungan</a></li>
-                <li><a href="pages/rekap.html">Rekap</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a href="tambah-tabungan.html">Tambah Tabungan</a></li>
+                <li><a href="rekap.html">Rekap</a></li>
             </ul>
             <div class="nav-toggle" id="navToggle">
                 <i class="fas fa-bars"></i>
@@ -165,9 +165,9 @@
                     <h4>Menu</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="pages/dashboard.html">Dashboard</a></li>
-                        <li><a href="pages/tambah-tabungan.html">Tambah Tabungan</a></li>
-                        <li><a href="pages/rekap.html">Rekap</a></li>
+                        <li><a href="dashboard.html">Dashboard</a></li>
+                        <li><a href="tambah-tabungan.html">Tambah Tabungan</a></li>
+                        <li><a href="rekap.html">Rekap</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
