--- a/dashboard.html
+++ b/dashboard.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/components.css">
-    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="components.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -20,7 +20,7 @@
                 <span>TabunganKu</span>
             </div>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="dashboard.html" class="active">Dashboard</a></li>
                 <li><a href="tambah-tabungan.html">Tambah Tabungan</a></li>
                 <li><a href="rekap.html">Rekap</a></li>
@@ -145,7 +145,7 @@
                 <div class="footer-links">
                     <h4>Menu</h4>
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="dashboard.html">Dashboard</a></li>
                         <li><a href="tambah-tabungan.html">Tambah Tabungan</a></li>
                         <li><a href="rekap.html">Rekap</a></li>
@@ -161,9 +161,9 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="../js/utils.js"></script>
+    <script src="utils.js"></script>
     
-    <script src="../js/data.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
