Update links to use relative paths

--- a/rekap.html
+++ b/rekap.html
@@ -19,7 +19,7 @@
                 <span>TabunganKu</span>
             </div>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="tambah-tabungan.html">Tambah Tabungan</a></li>
                 <li><a href="rekap.html" class="active">Rekap</a></li>
@@ -146,7 +146,7 @@
                 <div class="footer-links">
                     <h4>Menu</h4>
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="dashboard.html">Dashboard</a></li>
                         <li><a href="tambah-tabungan.html">Tambah Tabungan</a></li>
                         <li><a href="rekap.html">Rekap</a></li>
