--- a/dashboard.html
+++ b/dashboard.html
@@ -163,7 +163,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="utils.js"></script>
     
-    <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
+    <script src="data.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
